--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -1,28 +1,7 @@
-:root {
-    /* Thin 100; Light 300; Regular 400; Medium 500; Bold 700 */
-    --body-font: 'Montserrat Alternates', sans-serif;
-    --logo-font: 'Monoton', cursive;
-
-    --font-variant-color: #eae5d9;
-
-    --background-variant-color: #282121;
-
-    --palete-1-1: #332a1a;
-    --palete-1-2: #7c5b41;
-    --palete-1-3: #efdcd3;
-    --palete-1-4: #aa574b;
-    --palete-1-5: #541c13;
-
-    --palete-2-1: #ebd5b8;
-    --palete-2-2: #efbc9c;
-    --palete-2-3: #ea572a;
-    --palete-2-4: #0b4030;
-    --palete-2-5: #e39828;
-}
-
 /* --------- FOOTER CONTAINER --------- */
 .footer-container {
     font-size: 16px;
+    color: var(--background-color);
 }
 
 /* --------- FOOTER WAVE --------- */
@@ -33,7 +12,7 @@
     height: auto;
     margin-bottom: -0.5rem;
     margin-top: -20%;
-    background-color: var(--background-variant-color);
+    background-color: var(--background-color);
 }
 
 /* --------- LOGO --------- */
@@ -46,7 +25,7 @@
 .footer-logo {
     text-decoration: none;
     cursor: pointer;
-    color: var(--background-variant-color);
+    color: var(--background-color);
     font-family: var(--logo-font);
     font-size: 2.5rem;
     margin-bottom: -0.5rem;
@@ -64,7 +43,7 @@
 }
 
 .footer-links-container p {
-    color: var(--background-variant-color);
+    color: var(--background-color);
     font-weight: 500;
     font-size: 1.2rem;
     padding: 0 0.5rem;
@@ -77,7 +56,7 @@
 }
 
 .footer-social-links a {
-    color: var(--background-variant-color);
+    color: var(--background-color);
     font-size: 1.5rem;
     text-decoration: none;
 }
@@ -111,7 +90,7 @@
 
 .footer-list a {
     text-decoration: none;
-    color: var(--background-variant-color);
+    color: var(--background-color);
 }
 
 .footer-list a:hover {
@@ -120,7 +99,7 @@
 
 .footer-list i {
     margin-right: 10px;
-    color: var(--background-variant-color);
+    color: var(--background-color);
 }
 
 /* --------- COPY --------- */
