--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,23 @@
+:root {
+    --logo-font: 'Monoton', cursive;
+    --use-font: 'Satoshi', sans-serif;
+
+    --font-color: #eae5d9;
+    --background-color: #282121;
+
+    --palete-1-1: #332a1a;
+    --palete-1-2: #7c5b41;
+    --palete-1-3: #efdcd3;
+    --palete-1-4: #aa574b;
+    --palete-1-5: #541c13;
+
+    --palete-2-1: #ebd5b8;
+    --palete-2-2: #efbc9c;
+    --palete-2-3: #ea572a;
+    --palete-2-4: #0b4030;
+    --palete-2-5: #e39828;
+}
+
 * {
     margin: 0;
     padding: 0;
@@ -11,6 +31,8 @@
 
 body {
     min-height: 100dvh;
+    background-color: var(--background-color);
+    color: var(--font-color);
 }
 
 input,
@@ -24,6 +46,13 @@ p {
     text-wrap: pretty;
 }
 
+p,
+li,
+span {
+    font-family: var(--use-font);
+    font-weight: 200;
+}
+
 h1,
 h2,
 h3,
@@ -31,6 +60,7 @@ h4,
 h5,
 h6 {
     text-wrap: balance;
+    font-family: var(--use-font);
 }
 
 img,
