--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 :root {
     --logo-font: 'Monoton', cursive;
     --use-font: 'Satoshi', sans-serif;
@@ -18,32 +22,9 @@
     --palete-2-5: #e39828;
 }
 
-* {
-    margin: 0;
-    padding: 0;
-}
-
-*,
-*::before,
-*::after {
-    box-sizing: border-box;
-}
-
 body {
-    min-height: 100dvh;
     background-color: var(--background-color);
     color: var(--font-color);
-}
-
-input,
-button,
-textarea,
-select {
-    font: inherit;
-}
-
-p {
-    text-wrap: pretty;
 }
 
 p,
@@ -59,25 +40,5 @@ h3,
 h4,
 h5,
 h6 {
-    text-wrap: balance;
     font-family: var(--use-font);
-}
-
-img,
-video,
-svg {
-    height: auto;
-    max-width: 100%;
-}
-
-@media (prefers-reduced-motion: reduce) {
-    *,
-    *::before,
-    *::after {
-        transition: none;
-        animation-duration: 0.01ms !important;
-        animation-iteration-count: 1 !important;
-        transition-duration: 0.01ms !important;
-        scroll-behavior: auto !important;
-    }
 }
