--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -1,7 +1,7 @@
 /* --------- FOOTER CONTAINER --------- */
 .footer-container {
     font-size: 16px;
-    color: var(--background-color);
+    color: var(--font-color);
 }
 
 /* --------- FOOTER WAVE --------- */
@@ -12,7 +12,7 @@
     height: auto;
     margin-bottom: -0.5rem;
     margin-top: -20%;
-    background-color: var(--background-color);
+    background-color: var(--font-color);
 }
 
 /* --------- LOGO --------- */
@@ -25,7 +25,7 @@
 .footer-logo {
     text-decoration: none;
     cursor: pointer;
-    color: var(--background-color);
+    color: var(--font-color);
     font-family: var(--logo-font);
     font-size: 2.5rem;
     margin-bottom: -0.5rem;
@@ -43,7 +43,7 @@
 }
 
 .footer-links-container p {
-    color: var(--background-color);
+    color: var(--font-color);
     font-weight: 500;
     font-size: 1.2rem;
     padding: 0 0.5rem;
@@ -56,7 +56,7 @@
 }
 
 .footer-social-links a {
-    color: var(--background-color);
+    color: var(--font-color);
     font-size: 1.5rem;
     text-decoration: none;
 }
@@ -90,7 +90,7 @@
 
 .footer-list a {
     text-decoration: none;
-    color: var(--background-color);
+    color: var(--font-color);
 }
 
 .footer-list a:hover {
@@ -99,7 +99,7 @@
 
 .footer-list i {
     margin-right: 10px;
-    color: var(--background-color);
+    color: var(--font-color);
 }
 
 /* --------- COPY --------- */
