--- a/src/index.css
+++ b/src/index.css
@@ -6,14 +6,15 @@
     --logo-font: 'Monoton', cursive;
     --use-font: 'Satoshi', sans-serif;
 
-    --font-color: #eae5d9;
-    --background-color: #282121;
+    --font-color: #282121;
+    --background-color: #ebd5b8;
 
     --palete-1-1: #332a1a;
     --palete-1-2: #7c5b41;
     --palete-1-3: #efdcd3;
     --palete-1-4: #aa574b;
     --palete-1-5: #541c13;
+    --palete-1-6: #eae5d9;
 
     --palete-2-1: #ebd5b8;
     --palete-2-2: #efbc9c;
