--- a/src/components/main/main.css
+++ b/src/components/main/main.css
@@ -3,5 +3,6 @@
         display: flex;
         align-items: self-start;
         justify-content: center;
+        margin: 0 0.5em 0 0.7em;
     }
 }
